fix: center text alignment inside About main block

--- a/src/index.css
+++ b/src/index.css
@@ -179,6 +179,12 @@
     display: block;
   }
 
+  .centered-text {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   @media (max-width: 1024px) {
     .about-note {
       right: 32px;
